--- a/G/index.css
+++ b/G/index.css
@@ -1,6 +1,22 @@
 body {
-  background: black;
+  background-color: #222;
+  animation-name: color;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
 }
+
+@keyframes color {
+  0% {
+    background-color: #222;
+  }
+  50% {
+    background-color: #4285f4;
+  }
+  100 {
+    background-color: #222;
+  }
+}
+
 p {
   color: white;
   font-weight: bold;
