--- a/G/index.css
+++ b/G/index.css
@@ -9,10 +9,16 @@ body {
   0% {
     background-color: #222;
   }
+  25% {
+  	background-color: #7FFFD4;
+  }
   50% {
     background-color: #4285f4;
   }
-  100 {
+  75% {
+    background-color: #7FFF00;
+  }
+  100% {
     background-color: #222;
   }
 }
