--- a/G/index.css
+++ b/G/index.css
@@ -10,13 +10,13 @@ body {
     background-color: #222;
   }
   25% {
-  	background-color: #7FFFD4;
+  	background-color: #3D9970;
   }
   50% {
     background-color: #4285f4;
   }
   75% {
-    background-color: #7FFF00;
+    background-color: #FF851B;
   }
   100% {
     background-color: #222;
