--- a/index.css
+++ b/index.css
@@ -39,9 +39,12 @@ a{
   font-size: 20px;
   padding: 4px;
 }
-
-.padding-top-10{
-  padding-top: 2px;
+font-big-0 {
+  font-weight: bold;
+  font-size: 20px;
+  padding-top: 4px;
+  padding-right: 4px;
+  padding-bottom: 4px;
 }
 
 .padding-left-25{
