--- a/index.css
+++ b/index.css
@@ -25,6 +25,10 @@ a{
   color: #4e89a4;
 }
 
+.selected {
+  color: aqua;
+}
+
 .box{
   display: inline-block;
   padding-top: 0%;
@@ -38,13 +42,6 @@ a{
   font-weight: bold;
   font-size: 20px;
   padding: 4px;
-}
-font-big-0 {
-  font-weight: bold;
-  font-size: 20px;
-  padding-top: 4px;
-  padding-right: 4px;
-  padding-bottom: 4px;
 }
 
 .padding-left-25{
