--- a/3ds/style.css
+++ b/3ds/style.css
@@ -2,16 +2,16 @@ body {
   background-color: DarkBlue;
 }
 p {
-  color: blue;
+  color: white;
   font-weight: bold;
 }
 h1 {
-  color: blue;
+  color: white;
   font-weight: bold;
 }
 
 h3 {
-  color: blue;
+  color: white;
   font-weight: bold;
 }
 
