--- a/UnB/phpxy2.css
+++ b/UnB/phpxy2.css
@@ -33,3 +33,9 @@ input[type="submit"]:hover {
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     color: #222;
 }
+.center {
+    margin: auto;
+    width: 50%;
+    border: 3px solid green;
+    padding: 10px;
+}
