--- a/UnB/phpxy2.css
+++ b/UnB/phpxy2.css
@@ -3,7 +3,7 @@ input{
     padding: 10px;
     margin: 10px;
     height: 20px;
-    width: 500px;
+    width: auto;
     border:1px solid #eaeaea;
     outline:none;
 }
@@ -35,5 +35,5 @@ input[type="submit"]:hover {
 .center {
     margin: auto;
     width: 50%;
-    padding: 10px;
+    padding: 0px;
 }
