--- a/UnB/phpxy2.css
+++ b/UnB/phpxy2.css
@@ -1,9 +1,8 @@
 input{
     border: none;
-    padding: 10px;
     margin: 10px;
     height: 20px;
-    width: auto;
+    width: 720px;
     border:1px solid #eaeaea;
     outline:none;
 }
