--- a/UnB/phpxy2.css
+++ b/UnB/phpxy2.css
@@ -32,8 +32,14 @@ input[type="submit"]:hover {
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     color: #222;
 }
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    height: 60%;
+}
 .center {
     margin: auto;
-    width: 50%;
     padding: 0px;
 }
