--- a/UnB/phpxy2.css
+++ b/UnB/phpxy2.css
@@ -42,4 +42,8 @@ img {
 .center {
     margin: auto;
     padding: 0px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
