--- a/UnB/phpxy2.css
+++ b/UnB/phpxy2.css
@@ -1,53 +1,64 @@
+body {
+	margin:   0;
+	overflow: hidden;
+}
 input{
-    border: none;
-    padding: 10px;
-    margin: 10px;
-    height: 20px;
-    width: 720px;
-    border:1px solid #eaeaea;
-    outline:none;
+	border: none;
+	padding: 10px;
+	margin: 10px;
+	height: 20px;
+	width: 720px;
+	border:1px solid #eaeaea;
+	outline:none;
 }
 input:hover{
-    border-color: #a0a0a0 #b9b9b9 #b9b9b9 #b9b9b9;
+	border-color: #a0a0a0 #b9b9b9 #b9b9b9 #b9b9b9;
 }
 input:focus{
-    border-color:#4d90fe;
+	border-color:#4d90fe;
 }
 input[type="submit"] {
-    border-radius: 2px;
-    background: #f2f2f2;
-    border: 1px solid #f2f2f2;
-    color: #757575;
-    cursor: default;
-    font-size: 14px;
-    font-weight: bold;
-    width: auto;
-    padding: 0 16px;
-    height:36px;
+	border-radius: 2px;
+	background: #f2f2f2;
+	border: 1px solid #f2f2f2;
+	color: #757575;
+	cursor: default;
+	font-size: 14px;
+	font-weight: bold;
+	width: auto;
+	padding: 0 16px;
+	height:36px;
 }
 input[type="submit"]:hover {
-    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    background: #f8f8f8;
-    border: 1px solid #c6c6c6;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    color: #222;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+	background: #f8f8f8;
+	border: 1px solid #c6c6c6;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+	color: #222;
 }
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
-    height: 60%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 60%;
+	height: 60%;
 }
 .center {
-    margin: auto;
-    padding: 0px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+	margin: auto;
+	padding: 0px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 .centerbtns {
-    margin: auto;
-    padding: 0px;
+	margin: auto;
+	padding: 0px;
+}
+#pxy{
+      height:   98%;
+      left:     0px;
+      position: absolute;
+      top:      0px;
+      width:    100%;
 }
