--- a/UnB/phpxy2.css
+++ b/UnB/phpxy2.css
@@ -58,10 +58,14 @@ img {
 	text-align: center;
 	display: block;
 }
+.redfont {
+	font-size: 12px;
+	color: red;
+}
 #pxy{
-      height:   98%;
-      left:     0px;
-      position: absolute;
-      top:      0px;
-      width:    100%;
+	height:   98%;
+	left:     0px;
+	position: absolute;
+	top:      0px;
+	width:    100%;
 }
