--- a/UnB/phpxy.css
+++ b/UnB/phpxy.css
@@ -55,13 +55,8 @@ img {
 .centerbtns{
 	margin: auto;
 	padding: 10px;
+	width: 100%;
 	display: block;
-	text-align: center;
-}
-
-.redfont {
-	font-size: 12px;
-	color: red;
 }
 #pxy{
 	height:   98%;
