--- a/UnB/phpxy.css
+++ b/UnB/phpxy.css
@@ -25,11 +25,10 @@ input[type="submit"] {
 	cursor: default;
 	font-size: 14px;
 	font-weight: bold;
-	width: 50%;
+	width: auto;
 	padding: 0 16px;
 	height:36px;
-	display: inline-block;
-	float: left;
+	display: block;
 }
 input[type="submit"]:hover {
 	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
@@ -58,7 +57,6 @@ img {
 	padding: 10px;
 	width: 100%;
 }
-
 #pxy{
 	height:   98%;
 	left:     0px;
