--- a/UnB/phpxy.css
+++ b/UnB/phpxy.css
@@ -54,8 +54,11 @@ img {
 }
 .centerbtns{
 	margin: auto;
-	padding: 10px;
-	width: 100%;
+	padding: 0px;
+	position: absolute;
+	top: 60%;
+	left: 50%;
+	transform: translate(-50%, -60%);
 }
 #pxy{
 	height:   98%;
