--- a/UnB/phpxy.css
+++ b/UnB/phpxy.css
@@ -28,6 +28,7 @@ input[type="submit"] {
 	width: auto;
 	padding: 0 16px;
 	height:36px;
+	margin: auto;
 }
 input[type="submit"]:hover {
 	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
