--- a/UnB/phpxy.css
+++ b/UnB/phpxy.css
@@ -17,7 +17,7 @@ input:hover{
 input:focus{
 	border-color:#4d90fe;
 }
-input[type="submit"] {
+.submit {
 	border-radius: 2px;
 	background: #f2f2f2;
 	border: 1px solid #f2f2f2;
@@ -29,7 +29,26 @@ input[type="submit"] {
 	padding: 0 16px;
 	height: 36px;
 }
-input[type="submit"]:hover {
+.submit:hover {
+	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+	background: #f8f8f8;
+	border: 1px solid #c6c6c6;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+	color: #222;
+}
+.submit2 {
+	border-radius: 2px;
+	background: #f2f2f2;
+	border: 1px solid #f2f2f2;
+	color: #757575;
+	cursor: default;
+	font-size: 13px;
+	font-weight: bold;
+	width: auto;
+	padding: 0 16px;
+	height: 26px;
+}
+.submit2:hover {
 	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 	background: #f8f8f8;
 	border: 1px solid #c6c6c6;
