--- a/UnB/phpxy.css
+++ b/UnB/phpxy.css
@@ -23,6 +23,11 @@ input:hover{
 input:focus{
 	border-color:#4d90fe;
 }
+.bf{
+	width: 20px;
+	height: 20px;
+	display: inline-block;
+}
 .submit {
 	border-radius: 2px;
 	background: #f2f2f2;
