--- a/UnB/phpxy.css
+++ b/UnB/phpxy.css
@@ -2,7 +2,7 @@ body {
 	margin:   0;
 	overflow: hidden;
 }
-input{
+input[type="text"]{
 	border: none;
 	margin: 10px;
 	height: 20px;
@@ -68,6 +68,11 @@ input:focus{
 	border: 1px solid #c6c6c6;
 	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 	color: #222;
+}
+input[type="img"]{
+	height: 20px;
+	width: 20px;
+	margin: auto;
 }
 img {
 	display: block;
