--- a/UnB/phpxy.css
+++ b/UnB/phpxy.css
@@ -113,7 +113,7 @@ img {
 }
 .nuttynut{
 	top: 5px;
-	float: right;
+	float: left;
 	width: 25%;
 	overflow: none;
 	
@@ -121,7 +121,7 @@ img {
 .innernut{
 	top: 1px;
 	float: none;
-	width: 25%%;
+	width: 25%;
 	overflow: none;
 }
 #pxy{
